--- a/client/index.html
+++ b/client/index.html
@@ -8,5 +8,16 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#order">Order Now</a></li>
+          <li><a href="#reviews">Reviews</a></li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
