--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,9 @@
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
-    <nav>
+    <nav>    
+    </div>
+    </div>
       <div>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -19,5 +21,23 @@
         </ul>
       </div>
     </nav>
+      <div class="footer">
+        <div class="footer-heading -1">
+          <h2>Contact Us!</h2>
+        <ul class="footer-list">
+         <li>Adresa: Rruga "Asllan Rusi"</li> 
+         <li>Nr Cel: 0691111111</li> 
+         <li>Email: restaurantwebsite@gmail.com</li> 
+        </ul>
+          </div>
+          <div class="footer-heading -2">
+            <h2>Follow Us On Social Media</h2>
+            <a href="https://www.instagram.com"><img src="Images/instagram.png" width="15px">Instagram</a>
+            <a href="https://www.facebook.com"><img src="Images/facebook.png" width="15px">Facebook</a>
+          </div>
+          <div class="footer-heading -3">
+          <h2>All rights reserved Restoranti ⓒ2023</h2>
+          Tirana, Albania
+        </div>
   </body>
 </html>
