--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,6 @@
   </head>
   <body>
     <nav>    
-    </div>
-    </div>
       <div>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -21,8 +19,8 @@
         </ul>
       </div>
     </nav>
-      <div class="footer">
-        <div class="footer-heading -1">
+      <footer>
+        <div class="Heading">
           <h2>Contact Us!</h2>
         <ul class="footer-list">
          <li>Adresa: Rruga "Asllan Rusi"</li> 
@@ -30,14 +28,14 @@
          <li>Email: restaurantwebsite@gmail.com</li> 
         </ul>
           </div>
-          <div class="footer-heading -2">
+          <div class="Heading">
             <h2>Follow Us On Social Media</h2>
             <a href="https://www.instagram.com"><img src="Images/instagram.png" width="15px">Instagram</a>
             <a href="https://www.facebook.com"><img src="Images/facebook.png" width="15px">Facebook</a>
           </div>
-          <div class="footer-heading -3">
+          <div class="Heading">
           <h2>All rights reserved Restoranti ⓒ2023</h2>
           Tirana, Albania
-        </div>
+          </footer>
   </body>
 </html>
