--- a/client/index.html
+++ b/client/index.html
@@ -4,41 +4,143 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script type="text/javascript" src="script.js"></script>
 </head>
-
 <body>
-  <nav>
-    <div>
+  <div id= "restaurant-menu">
+  <div id="first-row">
+    <div id="menu">
+      <h1>MENU</h1>
+    </div>
+    <div id="appetizer">
+      <h2>Appetizer.</h2>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#order">Order Now</a></li>
-        <li><a href="#reviews">Reviews</a></li>
+        <li>
+          <span class="dish-name">Garlic Bread</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Potato Wedges</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Meat Ball</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Onion Rings</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">French Fries</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Ratatouille</span>
+          <span class="dish-price">$6.99</span>
+        </li>
       </ul>
     </div>
-  </nav>
-  <footer>
-    <div class="heading">
-      <h2>Contact Us!</h2>
+  </div>
+  <div id="second-row">
+    <div id="main-course">
+      <h2>Main Course</h2>
       <ul>
-        <li>Adresa: Rruga "Asllan Rusi"</li>
-        <li>Nr Cel: 0691111111</li>
-        <li>Email: restaurantwebsite@gmail.com</li>
+        <li>
+          <span class="dish-name">Grilled Fingerlings</span>
+          <span class="dish-price">$6.99</span>
+          <p>Grilled potatoes with a Western flair served with sauce of choice.</p>
+        </li>
+        <li>
+          <span class="dish-name">Asian Pear Salad</span>
+          <span class="dish-price">$6.99</span>
+          <p>Crisp pears and pecans with tender frisee, and maple syrup with cheese.</p>
+        </li>
+        <li>
+          <span class="dish-name">Roasted Acorn Squash</span>
+          <span class="dish-price">$6.99</span>
+          <p>Spicy-sweet, soft wedges potatoes which makes a no-fuse holiday meal</p>
+        </li>
+        <li>
+          <span class="dish-name">Smothered Chicken</span>
+          <span class="dish-price">$6.99</span>
+          <p>Grilled chicken breast topped with mushrooms, onions and Cheese.</p>
+        </li>
       </ul>
     </div>
-    <div class="heading">
-      <h2>Follow Us On Social Media</h2>
-      <a href="https://www.instagram.com"><img src="Images/instagram.png" width="15px">Instagram</a>
-      <a href="https://www.facebook.com"><img src="Images/facebook.png" width="15px">Facebook</a>
+    <div id="chefs-specials">
+      <h2>Chef's Specials.</h2>
+      <ul>
+        <li>
+          <span class="dish-name">Grilled Fingerlings</span>
+          <span class="dish-price">$6.99</span>
+          <p>Grilled potatoes with a Western flair served with sauce of choice.</p>
+        </li>
+        <li>
+          <span class="dish-name">Asian Pear Salad</span>
+          <span class="dish-price">$6.99</span>
+          <p>Crisp pears and pecans with tender frisee, and maple syrup with cheese.</p>
+        </li>
+        <li>
+          <span class="dish-name">Roasted Acorn Squash</span>
+          <span class="dish-price">$6.99</span>
+          <p>Spicy-sweet, soft wedges potatoes which makes a no-fuse holiday meal</p>
+        </li>
+        <li>
+          <span class="dish-name">Smothered Chicken</span>
+          <span class="dish-price">$6.99</span>
+          <p>Grilled chicken breast topped with mushrooms, onions and Cheese.</p>
+        </li>
+      </ul>
     </div>
-    <div class="heading">
-      <h2>All rights reserved Restoranti ⓒ2023</h2>
-      Tirana, Albania
-  </footer>
+  </div>
+  <div id="third-row">
+    <div id="dessert">
+      <h2>Dessert.</h2>
+      <ul>
+        <li>
+          <span class="dish-name">Banana Split</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Cheese Cake</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Chocolate Ice Cream</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Fruit Cake</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+      </ul>
+    </div>
+    <div id="drinks">
+      <h2>Drinks.</h2>
+      <ul>
+        <li>
+          <span class="dish-name">Coffee</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Ice / Hot Tea</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Thai Tea</span>
+          <span class="dish-price">$6.99</span>
+        </li>
+        <li>
+          <span class="dish-name">Soda</span>
+            <span class="dish-price">$6.99</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </div>
 </body>
-
 </html>
