--- a/client/index.html
+++ b/client/index.html
@@ -10,22 +10,15 @@
   <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-  <div id="home">
- <img src="images/home1.jpg">
- <img src="images/home2.jpg">
- <H4>Welcome to our restaurant!</H4>
- <p>In this restaurant we believe that dining is not just about nourishing the body but also about feeding the soul. We
-are more than just a restaurant; we are a culinary destination that combines exceptional food, warm hospitality, and a
-vibrant atmosphere to create an unforgettable dining experience.</p>
-<p>Our journey began with a simple vision: to create a place where people could come together to enjoy delicious food made
-with passion and care. Since our opening, we have been committed to sourcing the finest ingredients, crafting each dish
-with creativity, and providing unparalleled service to our guests.
-Our culinary team is led by talented chefs who have honed their skills in renowned kitchens around the world. They draw
-inspiration from global flavors while embracing local and seasonal produce, resulting in a menu that showcases the best
-of both worlds. From mouthwatering appetizers to exquisite main courses and decadent desserts, every dish is
-thoughtfully prepared to delight your taste buds.</p>
-<p>But it's not just about the food. Step into our restaurant, and you'll find yourself immersed in an inviting ambiance
-that reflects our dedication to creating a welcoming space for our guests. Whether you're celebrating a special
-occasion, enjoying a meal with loved ones, or simply looking for a cozy spot to unwind, we have thoughtfully designed
-our interiors to provide comfort and a touch of elegance.</p>
-</div>
+  <div class="navbar">
+    <a class="active" href="home.html">Home</a>
+    <a href="menu.html">Menu</a>
+    <a href="order.html">Order Now</a>
+    <a href="reviews.html">Reviews</a>
+  </div>
+
+  <!-- Këtu vendosni përmbajtjen e faqes tuaj -->
+  <h1>Faqja Kryesore</h1>
+  <p>Miresevini!</p>
+</body>
+</html>
