--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Best Coffee</title>
+    <title>BestCafe</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -149,6 +149,30 @@
       </div>
     </section>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <h2>Contact Us!</h2>
+      <div class="left-content">
+        <ul>
+          <li>Address: "Secret" Street 123.</li>
+          <li>Phone Number: 0667898765</li>
+          <li>Email: info@bestcafe.com</li>
+        </ul>
+      </div>
+      <div class="right-content">
+        <p>Follow Us On Social Media</p>
+        <div class="social-media">
+          <a href="https://www.instagram.com">
+            <img src="Images/instagram.png" width="15px" />Instagram
+          </a>
+          &nbsp;
+          <a href="https://www.facebook.com">
+            <img src="Images/facebook.png" width="15px" />Facebook
+          </a>
+        </div>
+      </div>
+      <p style="clear: both; text-align: center">
+        All rights reserved BestCafe &#169;2023
+      </p>
+    </footer>
   </body>
 </html>
